Automated Code Change
PiperOrigin-RevId: 626558205